// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpellFormSubmitButton /> should match the snapshot 1`] = `
<FormSubmitWrapper
  block={true}
  disabled={false}
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
          "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
          "duration": "Instantaneous",
          "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
          "level": 0,
          "materialComponent": "",
          "name": "Thunderclap",
          "range": "Self",
          "ritual": false,
          "school": "illusion",
          "shortDescription": "Create an ominous thunderclap when your name is spoken",
          "slug": "thunderclap",
          "somaticComponent": false,
          "verbalComponent": false,
        },
      },
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  outline={true}
>
  Create Spell
</FormSubmitWrapper>
`;

exports[`<SpellFormSubmitButton /> with isUpdate: true should match the snapshot 1`] = `
<FormSubmitWrapper
  block={true}
  disabled={false}
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
          "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
          "duration": "Instantaneous",
          "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
          "level": 0,
          "materialComponent": "",
          "name": "Thunderclap",
          "range": "Self",
          "ritual": false,
          "school": "illusion",
          "shortDescription": "Create an ominous thunderclap when your name is spoken",
          "slug": "thunderclap",
          "somaticComponent": false,
          "verbalComponent": false,
        },
      },
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  outline={true}
>
  Update Spell
</FormSubmitWrapper>
`;
